Spacing Issue Fixed

--- a/style.css
+++ b/style.css
@@ -154,6 +154,7 @@ hr.solid {
     display: flex;
     justify-content: center;
     font-family: Arial, Helvetica, sans-serif;
+    padding-bottom: 40px;
 }
 .locations{
     display: flex;
